# collected-company

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.py  pyproject.toml  test_gg.py
.github/workflows/: test.yml
coco/: __init__.py  gg.py
collected_company/: main.py
collected_company/api/routes/: cards.py  stores.py
collected_company/core/: config.py  database.py
collected_company/models/: card.py  price_cache.py  schemas.py  store.py
collected_company/scrapers/: __init__.py  base.py  binderbpos.py  crystalcommerce.py  generic.py  tcgplayerpro.py
collected_company/services/: scraper_service.py  scryfall_service.py
collected_company/static/js/: search.js
collected_company/templates/: index.html
scripts/: init_sample_stores.py
test/: GG - Sephiroth's Intervention [FINAL FANTASY].html
